# macos-setup

./: .envrc  .gitignore  README.md  ansible.cfg  backup.yml  hosts.yml  osx.yml  pyproject.toml  requirements-collections.yml
files/: zshrc.custom
files/zsh/: .zshrc  .zshrc.custom.after
templates/: .vimrc  .zshrc  .zshrc.custom.after  .zshrc.custom.before
vars/: vars.appstore.yml  vars.asdf.yml  vars.atom.yml  vars.backup.yml  vars.homebrew.yml  vars.ssh.yml  vars.vim.yml  vars.vscode.yml  vars.zsh.yml
