[tool.poetry]
name = "osx-setup"
version = "0.1.0"
description = "Installation of Hiep's MacOSX setup"
authors = ["Hiep"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
#ansible = "^8.3.0"
#ansible-modules-hashivault = "^5.1.1"
#websocket-client = "^1.6.2"
#jinja2-getenv-extension = "^1.0.2"
ansible = "^9.1.0"
ansible-core = "^2.16.2"
jinja2 = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
force-exclude = "gen,.git,.venv,.env,.githooks,__pycache__,docs,migrations,build"
line-length = 120

[tool.flake8]
# E231 is ignored to ensure flake8 compatibility with black
# docs => https://www.flake8rules.com/rules/E231.html
# W503 is also ignored to ensure flake8 compatibility with black
# docs => https://www.flake8rules.com/rules/W503.html
force-grid-wrap = 0
max-line-length = 120
multi-line-output = 3
exclude = """
    .git,
    venv,
    .github,
    __pycache__,
    docs,
    migrations,
    build
"""
ignore = "E231,W503,E203"
include-trailing-comma = true
use-parentheses = true

[tool.isort]
multi_line_output = 3
profile = "black"
